--- a/po/ca.po
+++ b/po/ca.po
@@ -2738,10 +2738,10 @@ msgstr "No es pot carregar la configuració per defecte des de: %1$s"
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"La directiva <tt>$cfg['PmaAbsoluteUri']</tt> HA d'estar establerta a l'arxiu "
+"La directiva <code>$cfg['PmaAbsoluteUri']</code> HA d'estar establerta a l'arxiu "
 "de configuració!"
 
 #: libraries/common.inc.php:647
