--- a/po/eu.po
+++ b/po/eu.po
@@ -2857,10 +2857,10 @@ msgstr ""
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"<tt>$cfg['PmaAbsoluteUri']</tt> direktibak zure konfigurazio fitxategian "
+"<code>$cfg['PmaAbsoluteUri']</code> direktibak zure konfigurazio fitxategian "
 "zehaztuta behar du egon!"
 
 #: libraries/common.inc.php:647
