--- a/po/ur.po
+++ b/po/ur.po
@@ -2866,10 +2866,10 @@ msgstr "طے شدہ تشکیلات کو لوڈ نہیں کرسکا: %1$s"
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"<tt>$cfg['PmaAbsoluteUri']</tt> ہدایات آپ کے تشکیل مسل میں لازمی موجود ہوں!"
+"<code>$cfg['PmaAbsoluteUri']</code> ہدایات آپ کے تشکیل مسل میں لازمی موجود ہوں!"
 
 #: libraries/common.inc.php:647
 #, php-format
