--- a/po/af.po
+++ b/po/af.po
@@ -2880,10 +2880,10 @@ msgstr ""
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"Die <tt>$cfg['PmaAbsoluteUri']</tt> veranderlike MOET gestel wees in jou "
+"Die <code>$cfg['PmaAbsoluteUri']</code> veranderlike MOET gestel wees in jou "
 "konfigurasie leer!"
 
 #: libraries/common.inc.php:647
