--- a/po/ar.po
+++ b/po/ar.po
@@ -2769,10 +2769,10 @@ msgstr "لا يمكن تحميل الإعدادات الإفتراضية من : 
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"المتغير <span dir=\"ltr\"><tt>$cfg['PmaAbsoluteUri']</tt></span> يجب تعديله "
+"المتغير <span dir=\"ltr\"><code>$cfg['PmaAbsoluteUri']</code></span> يجب تعديله "
 "في ملف التعريف !"
 
 #: libraries/common.inc.php:647
