--- a/po/az.po
+++ b/po/az.po
@@ -2911,10 +2911,10 @@ msgstr ""
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"<tt>$cfg['PmaAbsoluteUri']</tt> direktivi PMA konfiqurasiya faylınızda "
+"<code>$cfg['PmaAbsoluteUri']</code> direktivi PMA konfiqurasiya faylınızda "
 "QURULMAMIŞDIR!"
 
 #: libraries/common.inc.php:647
