--- a/po/be@latin.po
+++ b/po/be@latin.po
@@ -2994,7 +2994,7 @@ msgstr "Niemahčyma zahruzić kanfihuracyju pa zmoŭčańni z: \"%1$s\""
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
 "Dyrektyva $cfg['PmaAbsoluteUri'] PAVINNA być vyznačanaja ŭ vašym "
