--- a/po/bn.po
+++ b/po/bn.po
@@ -2893,10 +2893,10 @@ msgstr "\"%1$s\" হতে ডিফল্ট কনফিগারেশন ল
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 
 #: libraries/common.inc.php:647
