--- a/po/da.po
+++ b/po/da.po
@@ -2802,10 +2802,10 @@ msgstr "Kunne ikke indlæse standardkonfiguration fra: %1$s"
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"<tt>$cfg['PmaAbsoluteUri']</tt> direktivet SKAL være sat i din "
+"<code>$cfg['PmaAbsoluteUri']</code> direktivet SKAL være sat i din "
 "konfigurationsfil!"
 
 #: libraries/common.inc.php:647
