--- a/po/de.po
+++ b/po/de.po
@@ -2795,10 +2795,10 @@ msgstr "Fehler beim Laden der Standard-Konfiguration von: %1$s"
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"Das <tt>$cfg['PmaAbsoluteUri']</tt> Verzeichnis MUSS in Ihrer "
+"Das <code>$cfg['PmaAbsoluteUri']</code> Verzeichnis MUSS in Ihrer "
 "Konfigurationsdatei angegeben werden!"
 
 #: libraries/common.inc.php:647
