--- a/po/et.po
+++ b/po/et.po
@@ -2748,10 +2748,10 @@ msgstr "Ei saanud laadida vaikimisi seadistuse faili kohast: %1$s"
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"<tt>$cfg['PmaAbsoluteUri']</tt> väärtus PEAB sinu seadistusfailis olema "
+"<code>$cfg['PmaAbsoluteUri']</code> väärtus PEAB sinu seadistusfailis olema "
 "määratud!"
 
 #: libraries/common.inc.php:647
