--- a/po/fi.po
+++ b/po/fi.po
@@ -2840,9 +2840,9 @@ msgstr "Oletusasetuksia ei voitu ladata kohteesta: \"%1$s\""
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
-msgstr "<tt>$cfg['PmaAbsoluteUri']</tt> täytyy määritellä asetustiedostossa!"
+msgstr "<code>$cfg['PmaAbsoluteUri']</code> täytyy määritellä asetustiedostossa!"
 
 #: libraries/common.inc.php:647
 #, php-format
