--- a/po/hr.po
+++ b/po/hr.po
@@ -2975,10 +2975,10 @@ msgstr "Nije moguće učitati zadanu konfiguraciju iz: \"%1$s\""
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"Direktiva <tt>$cfg['PmaAbsoluteUri']</tt> MORA BITI postavljena u vašoj "
+"Direktiva <code>$cfg['PmaAbsoluteUri']</code> MORA BITI postavljena u vašoj "
 "konfiguracijskoj datoteci!"
 
 #: libraries/common.inc.php:647
