--- a/po/hu.po
+++ b/po/hu.po
@@ -2766,10 +2766,10 @@ msgstr "Nem lehetett betölteni az alapértelmezett konfigurációt innen: %1$s"
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"A <tt>$cfg['PmaAbsoluteUri']</tt> utasítás értékét a konfigurációs fájlban "
+"A <code>$cfg['PmaAbsoluteUri']</code> utasítás értékét a konfigurációs fájlban "
 "KELL megadni!"
 
 #: libraries/common.inc.php:647
