--- a/po/id.po
+++ b/po/id.po
@@ -2759,10 +2759,10 @@ msgstr "Tidak dapat memuat konfigurasi default dari: %1$s"
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"Directif <tt>$cfg['PmaAbsoluteUri']</tt> WAJIB diset dalam berkas "
+"Directif <code>$cfg['PmaAbsoluteUri']</code> WAJIB diset dalam berkas "
 "konfigurasi!"
 
 #: libraries/common.inc.php:647
