--- a/po/it.po
+++ b/po/it.po
@@ -2779,10 +2779,10 @@ msgstr "Non posso caricare la configurazione predefinita da: %1$s"
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"La direttiva <tt>$cfg['PmaAbsoluteUri']</tt> DEVE essere impostata nel file "
+"La direttiva <code>$cfg['PmaAbsoluteUri']</code> DEVE essere impostata nel file "
 "di configurazione!"
 
 #: libraries/common.inc.php:647
