--- a/po/ko.po
+++ b/po/ko.po
@@ -2741,10 +2741,10 @@ msgstr "기본 설정을 가져올 수 없습니다: %1$s"
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"환경설정 파일에 <tt>$cfg['PmaAbsoluteUri']</tt> 변수가 정의되어야 합니다!"
+"환경설정 파일에 <code>$cfg['PmaAbsoluteUri']</code> 변수가 정의되어야 합니다!"
 
 #: libraries/common.inc.php:647
 #, php-format
