--- a/po/lt.po
+++ b/po/lt.po
@@ -2784,10 +2784,10 @@ msgstr "Nepavyko užkrauti numatytų nustatymų failo iš: %1$s"
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"BŪTINA nustatymų faile įrašyti <tt>$cfg['PmaAbsoluteUri']</tt> reikšmę!"
+"BŪTINA nustatymų faile įrašyti <code>$cfg['PmaAbsoluteUri']</code> reikšmę!"
 
 #: libraries/common.inc.php:647
 #, php-format
