--- a/po/lv.po
+++ b/po/lv.po
@@ -2922,10 +2922,10 @@ msgstr ""
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"<tt>$cfg['PmaAbsoluteUri']</tt> direktīvai ir JĀBŪT nodefinētai Jūsu "
+"<code>$cfg['PmaAbsoluteUri']</code> direktīvai ir JĀBŪT nodefinētai Jūsu "
 "konfigurācijas failā!"
 
 #: libraries/common.inc.php:647
