--- a/po/mk.po
+++ b/po/mk.po
@@ -2924,10 +2924,10 @@ msgstr ""
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"<tt>$cfg['PmaAbsoluteUri']</tt> директивата МОРА да биде подесена во "
+"<code>$cfg['PmaAbsoluteUri']</code> директивата МОРА да биде подесена во "
 "конфигурациската податотека!"
 
 #: libraries/common.inc.php:647
