--- a/po/mn.po
+++ b/po/mn.po
@@ -2943,10 +2943,10 @@ msgstr "Анхдагч тохиргоо дуудагдсангүй нь: \"%1$s\
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"<tt>$cfg['PmaAbsoluteUri']</tt> -ыг тохиргооны файлд тохируулах хэрэгтэй!"
+"<code>$cfg['PmaAbsoluteUri']</code> -ыг тохиргооны файлд тохируулах хэрэгтэй!"
 
 #: libraries/common.inc.php:647
 #, fuzzy, php-format
