--- a/po/nb.po
+++ b/po/nb.po
@@ -2888,10 +2888,10 @@ msgstr "Kunne ikke laste standard konfigurasjonsfil fra: %1$s"
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"<tt>$cfg['PmaAbsoluteUri']</tt> variabelen MÅ være innstilt i din "
+"<code>$cfg['PmaAbsoluteUri']</code> variabelen MÅ være innstilt i din "
 "konfigurasjonsfil!"
 
 #: libraries/common.inc.php:647
