--- a/po/nl.po
+++ b/po/nl.po
@@ -2785,10 +2785,10 @@ msgstr "Standaard configuratiebestand kon niet geladen worden vanuit: %1$s"
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"De <tt>$cfg['PmaAbsoluteUri']</tt> richtlijn MOET gezet zijn in het "
+"De <code>$cfg['PmaAbsoluteUri']</code> richtlijn MOET gezet zijn in het "
 "configuratiebestand!"
 
 #: libraries/common.inc.php:647
