--- a/po/pl.po
+++ b/po/pl.po
@@ -2766,10 +2766,10 @@ msgstr "Nie można załadować domyślnej konfiguracji z: \"%1$s\""
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"Dyrektywa <tt>$cfg['PmaAbsoluteUri']</tt> musi być ustawiona w pliku "
+"Dyrektywa <code>$cfg['PmaAbsoluteUri']</code> musi być ustawiona w pliku "
 "konfiguracyjnym!"
 
 #: libraries/common.inc.php:647
