--- a/po/pt.po
+++ b/po/pt.po
@@ -2811,10 +2811,10 @@ msgstr "Não foi possível carregar configuração padrão de: \"%1$s\""
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"A directiva <tt>$cfg['PmaAbsoluteUri']</tt> TEM que ser definida no ficheiro "
+"A directiva <code>$cfg['PmaAbsoluteUri']</code> TEM que ser definida no ficheiro "
 "de configuração!"
 
 #: libraries/common.inc.php:647
