--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -2775,10 +2775,10 @@ msgstr "Não foi possível carregar configuração padrão de: \"%1$s\""
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"A diretriz<tt>$cfg['PmaAbsoluteUri']</tt> dDEVE ser estabelecida no seu "
+"A diretriz<code>$cfg['PmaAbsoluteUri']</code> dDEVE ser estabelecida no seu "
 "arquivo de configuração!"
 
 #: libraries/common.inc.php:647
