--- a/po/sl.po
+++ b/po/sl.po
@@ -2763,10 +2763,10 @@ msgstr "Ne morem naložiti privzete konfiguracije iz: %1$s"
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"Ukaz <tt>$cfg['PmaAbsoluteUri']</tt> MORA biti določen v konfiguracijski "
+"Ukaz <code>$cfg['PmaAbsoluteUri']</code> MORA biti določen v konfiguracijski "
 "datoteki!"
 
 #: libraries/common.inc.php:647
