--- a/po/sv.po
+++ b/po/sv.po
@@ -2751,10 +2751,10 @@ msgstr "Kunde inte ladda standardkonfiguration från: %1$s"
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"Variabeln <tt>$cfg['PmaAbsoluteUri']</tt> direktivet MÅSTE anges i din "
+"Variabeln <code>$cfg['PmaAbsoluteUri']</code> direktivet MÅSTE anges i din "
 "konfigurationsfil!"
 
 #: libraries/common.inc.php:647
