--- a/po/tr.po
+++ b/po/tr.po
@@ -2756,10 +2756,10 @@ msgstr "Varsayılan yapılandırma bundan yüklenemedi: %1$s"
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"<tt>$cfg['PmaAbsoluteUri']</tt> talimatı yapılandırma dosyanız içinde "
+"<code>$cfg['PmaAbsoluteUri']</code> talimatı yapılandırma dosyanız içinde "
 "AYARLANMAK zorundadır!"
 
 #: libraries/common.inc.php:647
