--- a/po/ug.po
+++ b/po/ug.po
@@ -2871,9 +2871,9 @@ msgstr "تەڭشەك ئەندىزى %1$s كىرگۈزىلمىدى."
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
-msgstr "<tt>$cfg['PmaAbsoluteUri']</tt> نى تەڭشەڭ !تەڭشەك ھۆججىتى ئىچىدىكى"
+msgstr "<code>$cfg['PmaAbsoluteUri']</code> نى تەڭشەڭ !تەڭشەك ھۆججىتى ئىچىدىكى"
 
 #: libraries/common.inc.php:647
 #, php-format
