--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -2705,9 +2705,9 @@ msgstr "无法加载默认配置: %1$s"
 
 #: libraries/common.inc.php:617
 msgid ""
-"The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
+"The <code>$cfg['PmaAbsoluteUri']</code> directive MUST be set in your "
 "configuration file!"
-msgstr "必须在您的配置文件中设置 <tt>$cfg['PmaAbsoluteUri']</tt> ！"
+msgstr "必须在您的配置文件中设置 <code>$cfg['PmaAbsoluteUri']</code> ！"
 
 #: libraries/common.inc.php:647
 #, php-format
