--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 phpMyAdmin - ChangeLog
 ======================
 
+3.5.1.0 (not yet released)
+
 3.5.0.0 (not yet released)
 + rfe #2021981 [interface] Add support for mass prefix change.
 + "up to date" message on main page when current version is up to date
