--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 phpMyAdmin - Readme
 ===================
 
-Version 3.5.0-rc2
+Version 3.5.1-dev
 
 A set of PHP-scripts to manage MySQL over the web.
 
